syntax = "proto3";

option java_multiple_files = true;
package com.grpcautomation;

service UserService {
    rpc getUserById (UserRequest) returns (UserResponse);
}

message UserRequest {
    string user_id = 1;
}

message UserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}
